fix z-index (#7083)

--- a/src/pages/common/components/SteppedSlider/SteppedSlider.less
+++ b/src/pages/common/components/SteppedSlider/SteppedSlider.less
@@ -30,7 +30,7 @@
         stroke-width: 2px;
         stroke: #fff;
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-        z-index: 10;
+        z-index: 1;
     }
 
     .stepMarksContainer {
